Update variables.sh